--- a/formula/main.tex
+++ b/formula/main.tex
@@ -5,10 +5,12 @@
 \input{ext/style}
 
 \begin{document}
-	% \include{contents/author}
-	% \include{contents/toc}
-	% \include{contents/Linear_Regression}
-	% \include{contents/Logistic_Regression}
-	\include{contents/Neural_Networks_legend1}
+	\include{contents/author}
+	\include{contents/toc}
+	\include{contents/Linear_Regression}
+	\include{contents/Logistic_Regression}
+	\include{contents/Neural_Networks_legend_Forward}
 	\include{contents/Neural_Networks_Forward}
+	\include{contents/Neural_Networks_legend_Backward}
+	\include{contents/Neural_Networks_Backward}
 \end{document}
