--- a/formula/contents/Neural_Networks_Backward.tex
+++ b/formula/contents/Neural_Networks_Backward.tex
@@ -82,7 +82,7 @@
 % \end{enumerate}
 
 
-\subsubsection{$\delta^{l}$（$2<=l<=L-2$）}
+\subsubsection{$\delta^{l}$($2<=l<=L-2$)}
 \begin{equation}\begin{aligned}
 	\delta^{l} &= (\Theta^{(l)})^T [\delta^{l+1}(2:end)] .* g^{'}(z^{l}) \\
 	&= (\Theta^{(l)})^T [\delta^{l+1}(2:end)] .* g(z^{l}) .* (1-g(z^{l}))
