--- a/formula/contents/Neural_Networks_Backward_legend.tex
+++ b/formula/contents/Neural_Networks_Backward_legend.tex
@@ -19,37 +19,37 @@
 % X与a的分隔线
 \draw [dashed] (1,-1) -- (1,9);
 
-% a^{(1)}
-\node[a] (a_10) at(2,10)   {$+1$};
-\node[a] (a_11) at(2,8)   {$a_1^{(1)}$};
-\node[a] (a_12) at(2,6) {$a_2^{(1)}$};
-\node[a] (a_13) at(2,4)   {$a_3^{(1)}$};
+% \delta^{(1)}
+\node[a] (a_10) at(2,10)   {0};
+\node[a] (a_11) at(2,8)   {0};
+\node[a] (a_12) at(2,6) {0};
+\node[a] (a_13) at(2,4)   {0};
 \filldraw (2,3) circle (.06);
 \filldraw (2,2) circle (.06);
 \filldraw (2,1) circle (.06);
-\node[a] (a_1s1) at(2,0) {$a_{s_1}^{(1)}$};
+\node[a] (a_1s1) at(2,0) {0};
 
-% a^{(2)}
-\node[a] (a_20) at(6,9.5) {$+1$};
-\node[a] (a_21) at(6,8.0) {$a_1^{(2)}$};
-\node[a] (a_22) at(6,6.5) {$a_2^{(2)}$};
-\node[a] (a_23) at(6,5.0) {$a_3^{(2)}$};
-\node[a] (a_24) at(6,3.5) {$a_4^{(2)}$};
+% \delta^{(2)}
+\node[a] (a_20) at(6,9.5) {$\delta_0^{(2)}$};
+\node[a] (a_21) at(6,8.0) {$\delta_1^{(2)}$};
+\node[a] (a_22) at(6,6.5) {$\delta_2^{(2)}$};
+\node[a] (a_23) at(6,5.0) {$\delta_3^{(2)}$};
+\node[a] (a_24) at(6,3.5) {$\delta_4^{(2)}$};
 \filldraw (6,2.4) circle (.06);
 \filldraw (6,1.8) circle (.06);
 \filldraw (6,1.2) circle (.06);
-\node[a] (a_2s2) at(6,0) {$a_{s_2}^{(2)}$};
+\node[a] (a_2s2) at(6,0) {$\delta_{s_2}^{(2)}$};
 
-% a^{(3)}
-\node[a] (a_30) at(10,9.5) {$+1$};
-\node[a] (a_31) at(10,8.0) {$a_1^{(3)}$};
-\node[a] (a_32) at(10,6.5) {$a_2^{(3)}$};
-\node[a] (a_33) at(10,5.0) {$a_3^{(3)}$};
-\node[a] (a_34) at(10,3.5) {$a_4^{(3)}$};
+% \delta^{(3)}
+\node[a] (a_30) at(10,9.5) {$\delta_0^{(3)}$};
+\node[a] (a_31) at(10,8.0) {$\delta_1^{(3)}$};
+\node[a] (a_32) at(10,6.5) {$\delta_2^{(3)}$};
+\node[a] (a_33) at(10,5.0) {$\delta_3^{(3)}$};
+\node[a] (a_34) at(10,3.5) {$\delta_4^{(3)}$};
 \filldraw (10,2.4) circle (.06);
 \filldraw (10,1.8) circle (.06);
 \filldraw (10,1.2) circle (.06);
-\node[a] (a_3s3) at(10,0) {$a_{s_3}^{(3)}$};
+\node[a] (a_3s3) at(10,0) {$\delta_{s_3}^{(3)}$};
 
 % 中间部分
 \filldraw (12,0) circle (.06);
@@ -58,78 +58,79 @@
 \filldraw (12,6) circle (.06);
 \filldraw (12,8) circle (.06);
 
-% a^{(n)}
+% \delta^{(n)}
 
-\node[a] (a_L1) at(14,7.5) {$a_1^{(L)}$};
-\node[a] (a_L2) at(14,6)   {$a_2^{(L)}$};
-\node[a] (a_L3) at(14,4.5) {$a_3^{(L)}$};
-\node[a] (a_L4) at(14,3)   {$a_4^{(L)}$};
+\node[a] (a_L1) at(14,7.5) {$\delta_1^{(L)}$};
+\node[a] (a_L2) at(14,6)   {$\delta_2^{(L)}$};
+\node[a] (a_L3) at(14,4.5) {$\delta_3^{(L)}$};
+\node[a] (a_L4) at(14,3)   {$\delta_4^{(L)}$};
 \filldraw (14,2.0) circle (.06);
 \filldraw (14,1.5) circle (.06);
 \filldraw (14,1.0) circle (.06);
-\node[a] (a_Lsl) at(14,0) {$a_{s_l}^{(L)}$};
+\node[a] (a_Lsl) at(14,0) {$\delta_{s_l}^{(L)}$};
 
 
-% 后向算法图例--仅连线：a21 -- a_1
-\draw[->] (a_21) -- (a_10);
-\draw[->] (a_21) -- (a_11);
-\draw[->] (a_21) -- (a_12);
-\draw[->] (a_21) -- (a_13);
-\draw[->] (a_21) -- (a_1s1);
-% 后向算法图例--仅连线：a22 -- a_1
-\draw[->] (a_22) -- (a_10);
-\draw[->] (a_22) -- (a_11);
-\draw[->] (a_22) -- (a_12);
-\draw[->] (a_22) -- (a_13);
-\draw[->] (a_22) -- (a_1s1);
-% 后向算法图例--仅连线：a23 -- a_1
-\draw[->] (a_23) -- (a_10);
-\draw[->] (a_23) -- (a_11);
-\draw[->] (a_23) -- (a_12);
-\draw[->] (a_23) -- (a_13);
-\draw[->] (a_23) -- (a_1s1);
-% 后向算法图例--仅连线：a24 -- a_1
-\draw[->] (a_24) -- (a_10);
-\draw[->] (a_24) -- (a_11);
-\draw[->] (a_24) -- (a_12);
-\draw[->] (a_24) -- (a_13);
-\draw[->] (a_24) -- (a_1s1);
-% 后向算法图例--仅连线：a2s2 -- a_1
-\draw[->] (a_2s2) -- (a_10);
-\draw[->] (a_2s2) -- (a_11);
-\draw[->] (a_2s2) -- (a_12);
-\draw[->] (a_2s2) -- (a_13);
-\draw[->] (a_2s2) -- (a_1s1);
+% % 后向算法图例--仅连线：\delta21 -- \delta_1
+% \draw[->] (a_21) -- (a_10);
+% \draw[->] (a_21) -- (a_11);
+% \draw[->] (a_21) -- (a_12);
+% \draw[->] (a_21) -- (a_13);
+% \draw[->] (a_21) -- (a_1s1);
+% % 后向算法图例--仅连线：\delta22 -- \delta_1
+% \draw[->] (a_22) -- (a_10);
+% \draw[->] (a_22) -- (a_11);
+% \draw[->] (a_22) -- (a_12);
+% \draw[->] (a_22) -- (a_13);
+% \draw[->] (a_22) -- (a_1s1);
+% % 后向算法图例--仅连线：\delta23 -- \delta_1
+% \draw[->] (a_23) -- (a_10);
+% \draw[->] (a_23) -- (a_11);
+% \draw[->] (a_23) -- (a_12);
+% \draw[->] (a_23) -- (a_13);
+% \draw[->] (a_23) -- (a_1s1);
+% % 后向算法图例--仅连线：\delta24 -- \delta_1
+% \draw[->] (a_24) -- (a_10);
+% \draw[->] (a_24) -- (a_11);
+% \draw[->] (a_24) -- (a_12);
+% \draw[->] (a_24) -- (a_13);
+% \draw[->] (a_24) -- (a_1s1);
+% % 后向算法图例--仅连线：\delta2s2 -- \delta_1
+% \draw[->] (a_2s2) -- (a_10);
+% \draw[->] (a_2s2) -- (a_11);
+% \draw[->] (a_2s2) -- (a_12);
+% \draw[->] (a_2s2) -- (a_13);
+% \draw[->] (a_2s2) -- (a_1s1);
 
-% 后向算法--仅连线: a31 --> a2
+
+% 后向算法--仅连线: \delta31 --> \delta2
 \draw[->] (a_31) -- (a_20);
 \draw[->] (a_31) -- (a_21);
 \draw[->] (a_31) -- (a_22);
 \draw[->] (a_31) -- (a_23);
 \draw[->] (a_31) -- (a_24);
 \draw[->] (a_31) -- (a_2s2);
-% 后向算法--仅连线: a32 --> a2
+% 后向算法--仅连线: \delta32 --> \delta2
 \draw[->] (a_32) -- (a_20);
 \draw[->] (a_32) -- (a_21);
 \draw[->] (a_32) -- (a_22);
 \draw[->] (a_32) -- (a_23);
 \draw[->] (a_32) -- (a_24);
 \draw[->] (a_32) -- (a_2s2);
-% 后向算法--仅连线: a33 --> a2
+% 后向算法--仅连线: \delta33 --> \delta2
 \draw[->] (a_33) -- (a_20);
 \draw[->] (a_33) -- (a_21);
 \draw[->] (a_33) -- (a_22);
 \draw[->] (a_33) -- (a_23);
 \draw[->] (a_33) -- (a_24);
 \draw[->] (a_33) -- (a_2s2);
-% 后向算法--仅连线: a34 --> a2
+% 后向算法--仅连线: \delta34 --> \delta2
 \draw[->] (a_34) -- (a_20);
 \draw[->] (a_34) -- (a_21);
 \draw[->] (a_34) -- (a_22);
 \draw[->] (a_34) -- (a_23);
 \draw[->] (a_34) -- (a_24);
 \draw[->] (a_34) -- (a_2s2);
-% 后向算法--仅连线: a3s3 --> a2
+% 后向算法--仅连线: \delta3s3 --> \delta2
 \draw[->] (a_3s3) -- (a_20);
 \draw[->] (a_3s3) -- (a_21);
 \draw[->] (a_3s3) -- (a_22);
