--- a/formula/contents/Linear_Regression.tex
+++ b/formula/contents/Linear_Regression.tex
@@ -67,6 +67,22 @@ y = y
 		\end{matrix}\right)_{(n+1)*1}
 \end{aligned}\end{equation}
 
+\begin{equation}\begin{aligned}
+	h_theta(x) &= X * \theta \\
+	    & = \left(\begin{matrix}
+			1 & x_1^{(1)} & x_2^{(1)} & x_3^{(1)} & \dots & x_n^{(1)} \\
+			1 & x_1^{(2)} & x_2^{(2)} & x_3^{(2)} & \dots & x_n^{(2)} \\
+			1 & x_1^{(3)} & x_2^{(3)} & x_3^{(3)} & \dots & x_n^{(3)} \\
+			\vdots    & \vdots    & \vdots    & \vdots    & \ddots & \vdots   \\
+			1 & x_1^{(m)} & x_2^{(m)} & x_3^{(m)} & \dots & x_n^{(m)} \\
+		\end{matrix}\right)
+		\left(\begin{matrix}
+			\theta^{(0)} \\ \theta^{(1)} \\ \theta^{(2)} \\ \theta^{(3)} \\ \vdots \\ \theta^{(n)} \\
+		\end{matrix}\right)
+\end{aligned}\end{equation}
+
+
+
 \begin{equation}
 	y = \left(\begin{matrix}
 		y^{(1)} \\ y^{(2)} \\ y^{(3)} \\ \vdots \\ y^{(m)}
