--- a/formula/contents/Regularization.tex
+++ b/formula/contents/Regularization.tex
@@ -14,8 +14,9 @@
 
 \[\begin{cases}
 	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
-	\theta_j := \theta_j - \alpha [\frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_j^{(i)} + \frac{\lambda}{m}\theta_j], \quad j \neq 0
+	\theta_j := \theta_j - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_j^{(i)} + \alpha\frac{\lambda}{m}\theta_j, \quad j \neq 0
 \end{cases}\]
+
 
 
 \subsubsection{矩阵计算方式}
@@ -27,11 +28,15 @@
 	\nabla J(\theta) = \frac{1}{2m} X^T \left[h_\theta(x) - y\right] + \frac{\lambda}{m}\sum_{i=1}^n \theta_j
 \end{equation}
 
-\[\begin{cases}
-	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
-	\theta := \theta - \alpha [\frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x^{(i)} + \frac{\lambda}{m}\theta], \quad j \neq 0
-\end{cases}\]
+% \[\begin{cases}
+% 	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
+% 	\theta := \theta - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x^{(i)} + \alpha \frac{\lambda}{m}\theta, \quad j \neq 0
+% \end{cases}\]
 
+\[matlab\begin{cases}
+	grad &= 1/m * X'*(h-y); , \quad\\
+	grad(2:end) &= grad(2:end) + lambda/m * theta(2:end);
+\end{cases}\]
 
 
 
@@ -44,18 +49,24 @@
 		+ \lambda \frac{1}{2m} \sum_{j=1}^n\theta_j^2
 \end{equation}
 
-\begin{equation}
-	\theta_j := \theta_j - \alpha \left[\frac{1}{m}\sum_{i=1}^m [h_\theta(x^{(i)})-y^{(i)}]x_j^{(i)} + \frac{\lambda}{m}\theta_j\right]
-\end{equation}
+\[\begin{cases}
+	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
+	\theta_j := \theta_j - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_j^{(i)} + \alpha\frac{\lambda}{m}\theta_j, \quad j \neq 0
+\end{cases}\]
 
 \subsubsection{矩阵计算方式}
 \begin{equation}
 		J(\theta) = \frac{1}{m} [-y^T \log{h_\theta(x)} - (1-y^T) \log{(1-h_\theta(x)}] + \lambda \frac{1}{2m}\theta^T \theta
 \end{equation}
 
-\[\begin{cases}
-	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
-	\theta := \theta - \alpha [\frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x^{(i)} + \frac{\lambda}{m}\theta], \quad j \neq 0
+% \[\begin{cases}
+% 	\theta_0 := \theta_0 - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x_0^{(i)}, \quad j=0 \\
+% 	\theta := \theta - \alpha \frac{1}{m} \sum_{i=1}^m(h_\theta(x^{(i)}) - y^{(i)})x^{(i)} + \alpha \frac{\lambda}{m}\theta, \quad j \neq 0
+% \end{cases}\]
+
+\[matlab\begin{cases}
+	grad &= 1/m * X'*(h-y); , \quad\\
+	grad(2:end) &= grad(2:end) + lambda/m * theta(2:end);
 \end{cases}\]
 
 
