--- a/formula/contents/Logistic_Regression.tex
+++ b/formula/contents/Logistic_Regression.tex
@@ -11,7 +11,7 @@
 
 \item 矩阵形式
 \begin{equation}
-	h_\theta(X) = \frac{1}{1 + e^{X \theta^T}}
+	h_\theta(X) = \frac{1}{1 + e^{X \theta}}
 \end{equation}
 \end{enumerate}
 
