--- a/formula/main.tex
+++ b/formula/main.tex
@@ -9,8 +9,9 @@
 	\include{contents/toc}
 	\include{contents/Linear_Regression}
 	\include{contents/Logistic_Regression}
-	\include{contents/Neural_Networks_legend_Forward}
+	\include{contents/Regularization}
+	\include{contents/Neural_Networks_Forward_legend}
 	\include{contents/Neural_Networks_Forward}
-	\include{contents/Neural_Networks_legend_Backward}
+	\include{contents/Neural_Networks_Backward_legend}
 	\include{contents/Neural_Networks_Backward}
 \end{document}
