添加调试技巧&SVM

--- a/formula/contents/tpl.tex
+++ b/formula/contents/tpl.tex
@@ -1,3 +1,8 @@
+% 不需对齐的公式
+\begin{equation}
+	
+\end{equation}
+
 % 需要等号对齐的公式
 \begin{equation}\begin{aligned}
 	
@@ -26,3 +31,6 @@
 
 % 红色字
 {\color{red}{ }}
+
+% 约等于号
+\approx
