--- a/formula/main.tex
+++ b/formula/main.tex
@@ -14,4 +14,6 @@
 	\include{contents/Neural_Networks_Forward}
 	\include{contents/Neural_Networks_Backward_legend}
 	\include{contents/Neural_Networks_Backward}
+	\include{contents/调试技巧}
+	\include{contents/svm}
 \end{document}
