--- a/formula/main.tex
+++ b/formula/main.tex
@@ -9,11 +9,11 @@
 	\include{contents/toc}
 	\include{contents/Linear_Regression}
 	\include{contents/Logistic_Regression}
-	\include{contents/Regularization}
-	\include{contents/Neural_Networks_Forward_legend}
-	\include{contents/Neural_Networks_Forward}
-	\include{contents/Neural_Networks_Backward_legend}
-	\include{contents/Neural_Networks_Backward}
-	\include{contents/调试技巧}
-	\include{contents/svm}
+	% \include{contents/Regularization}
+	% \include{contents/Neural_Networks_Forward_legend}
+	% \include{contents/Neural_Networks_Forward}
+	% \include{contents/Neural_Networks_Backward_legend}
+	% \include{contents/Neural_Networks_Backward}
+	% \include{contents/调试技巧}
+	% \include{contents/svm}
 \end{document}
