--- a/formula/contents/Logistic_Regression.tex
+++ b/formula/contents/Logistic_Regression.tex
@@ -1,6 +1,11 @@
 \section{逻辑回归(Logistic Regression)}
 \subsection{当只有2个类别时，使用1个分类器}
 
+\subsubsection{sigmoid函数}
+\begin{equation}
+	sigmoid(z) = \frac{1}{1 + e^z}
+\end{equation}
+
 
 \subsubsection{预测函数}
 \begin{enumerate}
@@ -30,31 +35,34 @@
 \end{equation}
 \end{enumerate}
 
-
-
-\subsubsection{梯度下降}
+\subsubsection{偏导数$\frac{\partial J(\theta)}{\partial \theta_j}$}
 \begin{enumerate}
-\item 数值形式
+\item 数值计算形式
 \begin{equation}
 	\frac{\partial J(\theta)}{\partial \theta_j} =
 	    \frac{1}{m} \sum_{i=1}^m \left[h_\theta(x^{(i)}) - y^{(i)}\right] x_j^{(i)}
 \end{equation}
 
-迭代方式：
-\begin{equation}
-	\theta_j :=
-	    \theta_j - \alpha \frac{1}{m} \sum_{i=1}^m \left[h_\theta(x^{(i)}) - y^{(i)}\right] x_j^{(i)}
-\end{equation}
-
-\item 矩阵形式
+\item 矩阵计算形式
 \begin{equation}
 	\nabla J(\theta) = \frac{1}{m} X^T \left[h_\theta(x) - y\right]
 \end{equation}
+\end{enumerate}
 
-迭代方式：
-\begin{equation}
-	\theta := \theta - \alpha \frac{1}{m} X^T \left[h_\theta(x) - y\right]
-\end{equation}
+
+\subsubsection{梯度下降迭代算法}
+\begin{enumerate}
+\item 数值计算形式
+\begin{equation}\begin{aligned}
+	\theta_j &:= \theta_j - \alpha\frac{\partial J(\theta)}{\partial \theta_j} \\
+	    &:= \theta_j - \alpha \frac{1}{m} \sum_{i=1}^m \left[h_\theta(x^{(i)}) - y^{(i)}\right] x_j^{(i)}
+\end{aligned}\end{equation}
+
+\item 矩阵计算形式
+\begin{equation}\begin{aligned}
+	\theta &:= \theta - \alpha\nabla J(\theta) \\
+		&:= \theta - \alpha \frac{1}{m} X^T \left[h_\theta(x) - y\right]
+\end{aligned}\end{equation}
 \end{enumerate}
 
 
